# hubverse_annotator

./: .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
assets/examples/: get_hubverse.R  super_mega_hubverse_example.parquet
hubverse-annotator/: app.py
